--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <script src='controller.main.js'  type='text/javascript'></script>
   <script src='controller.alt.js'  type='text/javascript'></script>
   <script src='service.js'  type='text/javascript'></script>
-  <script src='service.heroku.js'  type='text/javascript'></script>
+  <script src='directive.js'  type='text/javascript'></script>
+  <script src='post.directive.js'  type='text/javascript'></script>
   <link href='styles.css' rel='stylesheet' type='text/css'>
   <meta charset='utf-8'>
 <title>Page Title</title>
 </head>
 <body ng-app="myModule">
 
-  <a href="#/">Enter Info</a>
-  <a href="#/view2">View Selection</a>
+  <a href="#/">View 1</a>
+  <a href="#/view2">View 2</a>
 
   <ng-view></ng-view>
 
