--- a/view1.html
+++ b/view1.html
@@ -1,5 +1,11 @@
-<h1>Pick a band member and their instrument: </h1>
-<br />
-<input type="text" ng-model="name" placeholder="Name">
-<input type="text" ng-model="instrument" placeholder="Instrument">
-<button type="button" ng-click="store(name, instrument)">Submit</button>
+<main>
+  <header>
+    <!-- <logo /> -->
+  </header>
+  <posts>
+    <post ng-repeat="post in posts" />
+  </posts>
+  <!-- <sidebar>
+
+  </sidebar> -->
+</main>
