--- a/view1.html
+++ b/view1.html
@@ -1,11 +1,8 @@
 <main>
   <header>
-    <!-- <logo /> -->
+    <logo />
+    <h1 class="main-title">Crappy Reddit Knockoff</h1>
   </header>
-  <posts>
-    <post ng-repeat="post in posts" />
-  </posts>
-  <!-- <sidebar>
-
-  </sidebar> -->
+  <posts class="main-posts" />
+  <sidebar class="sidebar" />
 </main>
