--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.min.js"></script>
   <script src='app.js'  type='text/javascript'></script>
   <script src='controller.main.js'  type='text/javascript'></script>
-  <script src='controller.alt.js'  type='text/javascript'></script>
-  <script src='service.js'  type='text/javascript'></script>
   <script src='directive.js'  type='text/javascript'></script>
   <script src='post.directive.js'  type='text/javascript'></script>
+  <script src='sidebar.directive.js'  type='text/javascript'></script>
+  <script src='logo.directive.js'  type='text/javascript'></script>
   <link href='styles.css' rel='stylesheet' type='text/css'>
   <meta charset='utf-8'>
 <title>Page Title</title>
 </head>
 <body ng-app="myModule">
-
-  <a href="#/">View 1</a>
-  <a href="#/view2">View 2</a>
 
   <ng-view></ng-view>
 
